# opencv2ffmpeg

./: CMakeLists.txt  main.cpp
